--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -1,132 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="uk.co.nyakeh.stacks.DashboardActivity">
+    tools:context="uk.co.nyakeh.stacks.DashboardActivity"
+    tools:showIn="@layout/app_bar_dashboard">
 
-    <TextView
-        android:id="@+id/dashboard_header"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:paddingBottom="64dp"
-        android:text="@string/dashboard_header"
-        android:textSize="30sp"
-        android:textStyle="bold"/>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/netWorth_current_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dashboard_header"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="-48dp">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/dashboard_diff"
+            android:id="@+id/dashboard_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
             android:gravity="center"
-            android:padding="@dimen/auxiliary_margin"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            tools:text="£232.42"/>
-    </android.support.v7.widget.CardView>
+            android:paddingBottom="64dp"
+            android:text="@string/dashboard_header"
+            android:textSize="30sp"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/dashboard_percentageChange"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/netWorth_current_card"
-        android:gravity="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        tools:text="7.95%"/>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/dashboard_portfolio_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dashboard_percentageChange"
-        android:layout_margin="@dimen/activity_vertical_margin">
-
-        <TextView
-            android:id="@+id/dashboard_portfolio"
+        <android.support.v7.widget.CardView
+            android:id="@+id/netWorth_current_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="@dimen/auxiliary_margin"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            tools:text="£3287.17"/>
-    </android.support.v7.widget.CardView>
+            android:layout_below="@+id/dashboard_header"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="-48dp">
 
-    <TextView
-        android:id="@+id/dashboard_percentageFI"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dashboard_portfolio_card"
-        android:gravity="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        tools:text="0.787%"/>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/dashboard_daysSinceInvestment_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dashboard_percentageFI"
-        android:layout_margin="@dimen/activity_vertical_margin">
+            <TextView
+                android:id="@+id/dashboard_diff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/auxiliary_margin"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                tools:text="£232.42"/>
+        </android.support.v7.widget.CardView>
 
         <TextView
-            android:id="@+id/dashboard_daysSinceInvestment"
+            android:id="@+id/dashboard_percentageChange"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/netWorth_current_card"
             android:gravity="center"
-            android:padding="@dimen/auxiliary_margin"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            tools:text="14 days"/>
-    </android.support.v7.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dashboard_daysSinceInvestment_card"
-        android:layout_margin="@dimen/auxiliary_margin"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="10yr @ 5%"
-            android:textColor="@color/colorAccent"
-            android:textSize="30sp"/>
-
-        <TextView
-            android:id="@+id/dashboard_forecast"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:text="..."
             android:textColor="@color/colorAccent"
             android:textSize="30sp"
             android:textStyle="bold"
-            tools:text="£8,947.85"/>
+            tools:text="7.95%"/>
 
-    </LinearLayout>
-</RelativeLayout>
+        <android.support.v7.widget.CardView
+            android:id="@+id/dashboard_portfolio_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_percentageChange"
+            android:layout_margin="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:id="@+id/dashboard_portfolio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/auxiliary_margin"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                tools:text="£3287.17"/>
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/dashboard_percentageFI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_portfolio_card"
+            android:gravity="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            tools:text="0.787%"/>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/dashboard_daysSinceInvestment_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_percentageFI"
+            android:layout_margin="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:id="@+id/dashboard_daysSinceInvestment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/auxiliary_margin"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                tools:text="14 days"/>
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dashboard_daysSinceInvestment_card"
+            android:layout_margin="@dimen/auxiliary_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="10yr @ 5%"
+                android:textColor="@color/colorAccent"
+                android:textSize="30sp"/>
+
+            <TextView
+                android:id="@+id/dashboard_forecast"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="..."
+                android:textColor="@color/colorAccent"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                tools:text="£8,947.85"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
